# qa-chat

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
docker/app/: Dockerfile
utils/: llm.py  vector_store.py
